packages/fuels-macros/tests/ui/abigen/missing_name_attr.stderr
error: missing attribute 'name'
 --> tests/ui/abigen/missing_name_attr.rs:3:18
  |
3 | abigen!(Contract(abi = "some-abi.json"));
  |                  ^^^
